# ghostless_pacman

./: .gitignore  CMakeLists.txt  makefile  readme.md
cmake/: handle_dependencies.cmake
docs/: .gitignore  documentation.tex  manual.out  manual.tex  title.tex
docs/parts/: algorithm.tex  compiling.tex  definition.tex  definitions.tex  description.tex  error_handling.tex  introducion.tex  introduction.tex  manual.tex
src/: assets.c  assets.h  declarations.h  logic.c  logic.h  main.c  state.c  state.h  utils.c  utils.h
